--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,19 @@
 {
-    "manifest_version": 3,
-    "name": "vite-ts-react-test",
-    "version": "1.0",
-    "description": "",
-    "action": {
-        "default_popup": "index.html"
-    },
-    "permissions": [
-        "scripting",
-        "tabs",
-        "activeTab"
-    ],
-    "host_permissions": [
-        "https://*/*",
-        "http://*/*"
-    ],
-    "icons": {
-        "16": "vite.svg",
-        "32": "vite.svg"
-    }
+  "manifest_version": 3,
+  "name": "vite-ts-react-test",
+  "version": "1.0",
+  "description": "",
+  "action": {
+    "default_popup": "index.html"
+  },
+  "permissions": ["scripting", "tabs", "activeTab"],
+  "host_permissions": ["https://*/*", "http://*/*"],
+  "icons": {
+    "16": "vite.svg",
+    "32": "vite.svg"
+  },
+  "background": {
+    "service_worker": "background.js",
+    "persistent": false
   }
+}
